src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__delete_book_ui__delete_book_ui_tests__tests__snapshot_tests__delete_book_ui_renders_inverted_delete_preferences.snap
---
source: src/ui/readarr_ui/library/delete_book_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                   ╭──────────────────────  Delete Book  ──────────────────────╮                                                     
                                                   │          Do you really want to delete the book:           │                                                     
                                                   │                        Test Book?                         │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                            ╭───╮                          │                                                     
                                                   │         Delete Book Files: │   │                          │                                                     
                                                   │                            ╰───╯                          │                                                     
                                                   │                            ╭───╮                          │                                                     
                                                   │        Add List Exclusion: │ ✔ │                          │                                                     
                                                   │                            ╰───╯                          │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │                                                           │                                                     
                                                   │╭────────────────────────────╮╭───────────────────────────╮│                                                     
                                                   ││             Yes            ││            No             ││                                                     
                                                   │╰────────────────────────────╯╰───────────────────────────╯│                                                     
                                                   ╰───────────────────────────────────────────────────────────╯
